--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ NEXT_PUBLIC_API_URL=http://localhost:3333
 NEXT_PUBLIC_APP_NAME=new_project
 NEXT_PUBLIC_APP_KEY=997183d0aa6b358a4a9db
 NEXT_PUBLIC_VERSION=1
+NEXT_PUBLIC_FACEBOOK_APP_ID=337403978525891
+NEXT_PUBLIC_GOOGLE_APP_ID=753875100965-uqa692t84g20k2m0djocqohr2c4d7a1u.apps.googleusercontent.com
